--- a/SMplayer.yml
+++ b/SMplayer.yml
@@ -16,7 +16,7 @@ ingredients:
     ppas:
     - linux-schools/samba-latest 
 
-  dist: xenial
+  dist: bionic
   sources:
     - deb http://archive.ubuntu.com/ubuntu/ xenial main universe
     - deb http://ppa.launchpad.net/rvm/smplayer/ubuntu xenial main
