--- a/SMplayer.yml
+++ b/SMplayer.yml
@@ -18,6 +18,6 @@ ingredients:
 
   dist: bionic
   sources:
-    - deb http://archive.ubuntu.com/ubuntu/ xenial main universe
-    - deb http://ppa.launchpad.net/rvm/smplayer/ubuntu xenial main
-    - deb http://ppa.launchpad.net/mc3man/mpv-tests/ubuntu xenial main
+    - deb http://archive.ubuntu.com/ubuntu/ bionic main universe
+    - deb http://ppa.launchpad.net/rvm/smplayer/ubuntu bionic main
+    - deb http://ppa.launchpad.net/mc3man/mpv-tests/ubuntu bionic main
