--- a/SMplayer.yml
+++ b/SMplayer.yml
@@ -21,3 +21,17 @@ ingredients:
     - deb http://archive.ubuntu.com/ubuntu/ xenial main universe
     #- deb http://ppa.launchpad.net/rvm/smplayer/ubuntu xenial main
     #- deb http://ppa.launchpad.net/mc3man/mpv-tests/ubuntu xenial main
+  script:
+    - cat > smplayer.desktop <<EOF
+    - [Desktop Entry]
+    - Name=SMPlayer
+    - GenericName=Media Player
+    - Comment=A great MPlayer front-end
+    - Exec=smplayer %U
+    - Icon=smplayer
+    - Terminal=false
+    - Type=Application
+    - X-KDE-StartupNotify=false
+    - Categories=Qt;KDE;AudioVideo;Player;Video;
+    - MimeType=audio/ac3;audio/mp4;audio/mpeg;audio/vnd.rn-realaudio;audio/vorbis;audio/x-adpcm;audio/x-matroska;audio/x-mp2;audio/x-mp3;audio/x-ms-wma;audio/x-vorbis;audio/x-wav;audio/mpegurl;audio/x-mpegurl;audio/x-pn-realaudio;audio/x-scpls;audio/aac;audio/flac;audio/ogg;video/avi;video/mp4;video/flv;video/mpeg;video/quicktime;video/vnd.rn-realvideo;video/x-matroska;video/x-ms-asf;video/x-msvideo;video/x-ms-wmv;video/x-ogm+ogg;video/x-theora;video/webm;
+    - EOF
